Add logo and favicon SVG files; update logo paths in Hugo configuration

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -64,6 +64,11 @@ params:
   navbar:
     displayTitle: true
     displayLogo: true
+    logo:
+      path: images/logo.svg
+      dark: images/logo-dark.svg
+      link: /
+      width: 50
 
   footer:
     displayPoweredBy: true
